Hotfix for client logos - allow a bit more space below to prevent the text cutting off

--- a/tbx/static_src/sass/components/_client-item.scss
+++ b/tbx/static_src/sass/components/_client-item.scss
@@ -65,7 +65,7 @@
 
     .streamfield & {
         width: 100%;
-        padding: 0;
+        padding: 0 0 25px;
 
         &::before {
             content: none; // don't show li arrow
